@@ -6,6 +6,12 @@ ${MIRROR_WGET}/download_package build.berkeleybop.org.gpad.goload
 ${MIRROR_WGET}/download_package ftp.ebi.ac.uk.goload 
 ${MIRROR_WGET}/download_package ftp.geneontology.org.goload 
 
+TAG: goload-6-0-7-3
+DATE: 01/23/2017
+STAFF: lec 
+CHANGES:
+1) TR11938/goamouse/goamousepost.py/autoindex marker/autoselect reference
+
 TAG: goload-6-0-7-1
 TAG: goload-6-0-7-2
 DATE: 01/05/2017, 01/09/2017
